# dstui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  app.rs  config.rs  event.rs  lib.rs  main.rs  setup.rs  ui.rs  util.rs
src/ui/: app.rs  mod.rs
src/util/: mod.rs
tests/: config_roundtrip.rs
