[package]
name = "dstui"
version = "0.4.0"
description = "dstui"
authors = ["shan <shandoor@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime = "2.2.0"
chrono = { version = "0.4.40", features = ["serde"] }
dirs = "6.0.0"
toml = "0.9.5"
clipboard-rs = "0.3.0"
reqwest = { version = "0.11.27", features = [
  "json",
  "cookies",
  "cookie_store",
  "multipart"
] }
